<resources>
    <string name="app_name">Instagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="button_text_login">Login</string>
    <string name="button_text_logout">Log out</string>
    <string name="button_text_register">Register</string>
    <string name="img_content_descr">Image to be posted</string>
    <string name="description">Description…</string>
    <string name="button_text_take_photo">Take Picture</string>
    <string name="button_text_submit_post">Post</string>
    <string name="menu_home">Home</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timestamp">Timestamp</string>
</resources>