<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_size"
        android:layout_margin="@dimen/layout_margin"
        android:contentDescription="@string/img_content_descr"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_margin="@dimen/layout_margin"
        android:autofillHints="description"
        android:ems="@dimen/text_size"
        android:hint="@string/description"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/button_text_take_photo" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCaptureImage"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/button_text_submit_post" />

</RelativeLayout>