<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/detail_padding"
        android:layout_marginTop="@dimen/detail_padding"
        android:layout_marginEnd="@dimen/detail_padding"
        android:layout_marginBottom="@dimen/detail_padding"
        android:text="@string/username"
        android:textSize="@dimen/big_text_size" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvUsername"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/timestamp_border"
        android:layout_marginTop="@dimen/detail_padding"
        android:layout_marginEnd="@dimen/detail_padding"
        android:layout_marginBottom="@dimen/detail_padding"
        android:layout_toEndOf="@+id/tvUsername"
        android:text="@string/timestamp"
        android:textSize="@dimen/small_text_size" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/post_size"
        android:layout_below="@+id/tvUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/detail_padding"
        android:layout_marginEnd="@dimen/detail_padding"
        android:contentDescription="@string/description"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_margin="@dimen/detail_padding"
        android:layout_marginTop="@dimen/description_margin"
        android:text="@string/description"
        android:textSize="@dimen/big_text_size" />

</RelativeLayout>